tests/unit/scaffolding/generate-default-deny-networkpolicy/generated-team-checkout.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: team-checkout
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
