tests/unit/scaffolding/generate-default-deny-networkpolicy/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-checkout
