tests/unit/scaffolding/generate-default-deny-networkpolicy/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-default-deny-networkpolicy-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: generate-default-deny-networkpolicy
    isGeneratingPolicy: true
    kind: Namespace
    resources:
      - team-checkout
    generatedResources: 
      - generated-team-checkout.yaml
    result: pass
